--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
               
 
-		  <li>Biffstroganoff med ris</li>
-		    <li>Panerad flundra med kall sås och potatis</li>
+		  <li>Köttbullar med gräddsås, lingon och potatismos</li>
+		    <li>Örtbakad fisk med vitvinsås och potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta kyckling</li>
-              <li>Pizza vesuvio</li>
+              <li>Pasta carbonara</li>
+              <li>Pizza hawaii</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
 
