--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
               
 
-		  <li>Köttbullar med gräddsås, lingon och potatismos</li>
+		  <li>Kokt köttkorv med pepparotsstuvad blomkål, senap och kokt potatis</li>
 		    <li>Örtbakad fisk med vitvinsås och potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
