--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
               
 
-		  <li>Kokt köttkorv med pepparotsstuvad blomkål, senap och kokt potatis</li>
-		    <li>Örtbakad fisk med vitvinsås och potatis</li>
-		                  <li></li>  
+		  <li>Vildsvinsstek med vitlöksfrästa champinjoner, rödvinssås och potatisgratäng</li>
+		    <li>Panerad fisk med majonäs på rökt lax och räkor samt kokt potatis</li>
+		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta carbonara</li>
