--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
               
 
-		  <li>Ugnsgratinerad falukorv med potatismos</li>
-		    <li>Fisk i tomatsås med potatismos</li>
+		  <li>Korvgryta med kokt potatis</li>
+		    <li>Panerad fisk med lax och räkröra samt kokt potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta carbonara</li>
-              <li>Pizza hawaii</li>
+              <li>Pasta kyckling</li>
+              <li>Pizza capriccosa</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
 
