--- a/Hem.html
+++ b/Hem.html
@@ -92,8 +92,9 @@
 
 
 
-		  <li>Korvgryta med kokt potatis</li>
-		    <li>Panerad fisk med lax och räkröra samt kokt potatis</li>
+	
+		  <li>Mörbakad fläskkarre med skysås, bearnaise och klyftpotatis</li>
+		    <li>Laxfjäril med hollandaisesås och kokt potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
