--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
               
 
-		  <li>stekt fläsk med löksås och kokt potatis</li>
-		    <li>chili con carne med ris</li>
-		    <li>Panerad fisk med dill och räkröra samt kokt potatis</li>
+		  <li>Panerad kyckling med sweetchili- och currysås samt ris</li>
+		    
+		    <li>Mandeltorsk med skirat smör och kokt potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
