--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
               <li>Pizza capriccosa</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
+		     <li>Ost och skinksallad</li>
 
             </ul>
           </div>
