--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
               
 
-		  <li>Kryddig kycklingfile med sweetchilimajonäs och bulgur</li>
+		  <li>Stekt fläsk, lingon och kokt potatis</li>
 		    
 		    <li>Panerad fisk med hollandaisesås och kokt potatis</li>
 		           <li>Pyttipanna med stekt ägg och rödbetor</li>        
