--- a/Hem.html
+++ b/Hem.html
@@ -92,15 +92,13 @@
 
 
  
-	
-		  <li>stekt fläsk, lingon och kokt potatis</li>
-		    
-		    <li>Panerad fisk med hollandaisesås och kokt potatis</li>
-		           <li>Pyttipanna med stekt ägg och rödbetor</li>        
+	<li>Snitzel med skysås, persiljesmör och rostad potatis</li>
+		 		    <li>Örtbakad flundra med citroncreme och kokt potatis</li>
+		                  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta carbonara</li>
-              <li>Pizza hawaii</li>
+              <li>Pasta bolognese</li>
+              <li>Pizza fungi</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
 		     <li>Grekisk sallad</li>
