--- a/sallad.html
+++ b/sallad.html
@@ -85,9 +85,8 @@
             Ljusterö torg 8<br>
             18495<br>
             Ljusterö</p>
+         <br> <h4>Telefon:</h4><p>076 041 32 66</p>
             <br> <h4>Epost adress:</h4><p>turquaz2023@gmail.com</p>
-            <h4>Följ oss på:</h4><br>
-            <a href="https://www.facebook.com/profile.php?id=61558068862184" ><img src="images/facebook.png" alt="Facebook ikon"></a><a href="https://www.instagram.com/theofficesport_bk/"><img src="images/instagram.png" alt="instagram ikon" style="margin-left: 32px;"></a>
             
           </div>
 </div>
