--- a/alacarte.html
+++ b/alacarte.html
@@ -22,6 +22,7 @@
     <section id="banner">
         <div class="nav">
             <ul>
+                <li><a href="index.html"></a></li>
               <li><a href="index.html">Hem</a></li>
                 
                 <li><a href="alacarte.html">Ala Carte</a></li>
