--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
       
 <section class="lunch">
        
-        <h2 class="font-cormorant">Dagens lunch!</h2><h2 class="font-cormorant"> </h2>
+        <h2 class="font-cormorant">Dagens lunch! 08/21</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
-            <ol>Lasagne</ol>
-            <ol>Lax med vitvinsås och kokt potatis</ol>
-            <ol>Kycklinghamburgare med pommes</ol>
+            <ol>Pannbiff med inlagd gurka, gräddsås och kokt potatis</ol>
+            <ol>Pestobakad fisk med gräddig tomatsås och kokt potatis</ol>
+            <ol>Lasagne med tomatsås</ol>
+            <ol>Kycklingburgertallrik med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
             <ol>Kyckling-kebabtallrik</ol>
             <ol>Kebabtallrik</ol>
